# epub2anki

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/epub2anki/: db.py  main.py  prompt_completion.py  prompt_generation.py  toc.py
test/: test_toc.py
