[project]
name = "epub2anki"
version = "0.1.0"
description = "Convert books and ebooks into Anki flashcards using Anthropic's Claude API."
authors = [
    { name = "Matteo Gätzner", email = "matteo.gatzner@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.86.0",
    "ebooklib>=0.20",
    "genanki>=0.13.1",
    "instructor>=1.14.5",
    "markdown>=3.10.2",
    "markitdown>=0.1.5",
    "pydantic>=2.12.5",
    "tqdm>=4.67.3",
]
[project.scripts]
epub2anki = "epub2anki.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pdbpp>=0.12.1",
    "pytest>=9.0.2",
    "pre-commit>=3.7.1",
    "ruff>=0.3.4",
]
